# CML-Cloud-Manager

./: .dockerignore  .env.example  .flake8  .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yml  API_ENDPOINTS_SUMMARY.md  CHANGELOG.md  Dockerfile  Makefile  README.md  TODO.md  VERIFICATION_REPORT.md  ccm.code-workspace  cml-cloud.code-workspace  docker-compose.dev.yml  docker-compose.yml  get_worker_details.sh  list_cml_instances.sh  mkdocs.yml  package-lock.json  pyproject.toml  pytest.ini  test_cml_api_debugging.md  test_import_worker.sh  test_telemetry_fix.py
deployment/: README.md
src/control-plane-api/: Dockerfile  Makefile  README.md  api_server.py  background_worker.py  main.py  pyproject.toml  pytest.ini
src/control-plane-api/api/controllers/: app_controller.py  auth_controller.py  diagnostics_controller.py  events_controller.py  system_controller.py
src/control-plane-api/api/models/: cml_worker_requests.py  system_settings_requests.py
src/control-plane-api/application/: settings.py
src/control-plane-api/application/commands/: __init__.py
src/control-plane-api/application/decorators/: retry.py
src/control-plane-api/application/dtos/: __init__.py  cml_worker_dto.py
src/control-plane-api/application/jobs/: license_registration_job.py  on_demand_worker_data_refresh_job.py
src/control-plane-api/application/mapping/: profile.py
src/control-plane-api/application/queries/: get_task_by_id_query.py  get_tasks_query.py  get_worker_labs_query.py  get_worker_telemetry_events_query.py
src/control-plane-api/application/services/: background_scheduler.py  sse_event_relay.py  system_configuration_service.py  system_health_service.py
src/control-plane-api/domain/: enums.py
src/control-plane-api/domain/entities/: lab_record.py  task.py
src/control-plane-api/domain/events/: __init__.py  cml_worker.py
src/control-plane-api/domain/repositories/: system_settings_repository.py
src/control-plane-api/domain/value_objects/: cml_license.py
src/control-plane-api/infrastructure/: session_store.py
src/control-plane-api/integration/enums/: cisco_certs.py  ec2_instance.py
src/control-plane-api/integration/models/: __init__.py  cml_worker_instance_dto.py
src/control-plane-api/integration/repositories/: __init__.py  motor_cml_worker_repository.py  motor_system_settings_repository.py  motor_task_repository.py
src/control-plane-api/integration/services/: __init__.py  relative_time.py
src/control-plane-api/observability/: metrics.py
src/control-plane-api/tests/: conftest.py
src/control-plane-api/tests/application/: test_commands.py  test_create_cml_worker_command.py  (+1 more)
src/control-plane-api/ui/: build-template.js  package-lock.json  package.json
src/controller/: Dockerfile  Makefile  README.md  main.py  pyproject.toml  pytest.ini
src/controller/application/: __init__.py  settings.py
src/controller/infrastructure/: __init__.py
src/controller/tests/: __init__.py
(+470 files in other folders)
